--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -37,6 +37,12 @@ title = "Hugo-tufte Theme Example Site"
   identifier = "home"
   url = "/"
 [[menu.nav]]
+  name = "About"
+  pre = "<i class='fa fa-user-plus fa-lg'></i> "
+  weight = -105 
+  identifier = "about"
+  url = "/about"
+[[menu.nav]]
   name = "Posts"
   pre = "<i class='fa fa-book fa-lg'></i> "
   weight = -100 
